Separate files; Creating EventManager